--- a/app/component/landing/login/login.html
+++ b/app/component/landing/login/login.html
@@ -16,7 +16,7 @@
       'error': loginForm.password.$invalid && loginForm.$submitted,
       'success': loginForm.password.$valid
     }">
-      <input type="text"
+      <input type="password"
              name="password"
              ng-disabled="loginForm.username.$invalid"
              placeholder="password"
