--- a/app/scss/lib/base/_base.scss
+++ b/app/scss/lib/base/_base.scss
@@ -37,6 +37,14 @@ button{
   margin-right: $gutterP / 2;
   padding: 0;
   height: 40px;
+  outline: 0;
+}
+.btn-std:focus{
+  outline: 0;
+
+}
+.btn-std:hover{
+
 }
 
 input{
@@ -52,7 +60,7 @@ input{
 
 input:focus {
     margin-right: $gutterP / 2;
-    border: 3px solid #555;
+    outline: 3px solid #555;
     // width: 90%;
-    outline: 0;
+    // outline: 0;
 }
