styling gallery and nav

--- a/app/component/navbar/navbar.html
+++ b/app/component/navbar/navbar.html
@@ -1,9 +1,9 @@
 <section class="navbar">
-  <!-- <img src="" alt="">  LOGO HERE-->
   <h2>cfgram</h2>
+
   <nav>
     <div ng-hide="navbarCtrl.hideButtons">
-      <button class="btn-std" ng-click="navbarCtrl.logout()">logout</button>
+      <input class="btn-std" type="submit" value="logout" ng-click="navbarCtrl.logout()">
     </div>
   </nav>
 </section>
