--- a/app/component/gallery/create-gallery/create-gallery.html
+++ b/app/component/gallery/create-gallery/create-gallery.html
@@ -2,23 +2,24 @@
   <form class="gallery-form"
         name="createGalleryForm"
         ng-submit="createGalleryCtrl.createGallery()">
+    <h2>Create a new gallery</h2>
     <fieldset>
-      <label for="name">name</label>
       <input class="input-std"
              name="name"
              type="text"
+             value="name"
+             placeholder="gallery name"
              ng-model="createGalleryCtrl.gallery.name" required>
     </fieldset>
     <fieldset>
-      <label for="desc">description</label>
       <input class="input-std"
              name="desc"
              type="text"
+             placeholder="gallery description"
              ng-model="createGalleryCtrl.gallery.desc" required>
     </fieldset>
-    <button class="btn-std"
-            type="submit">
-              create gallery
-    </button>
+    <input class="btn-std evilbutton"
+           type="submit"
+           value="create gallery">
   </form>
 </section>
