--- a/app/scss/lib/base/_base.scss
+++ b/app/scss/lib/base/_base.scss
@@ -49,13 +49,15 @@ button{
 
 input{
   width:90%;
-  margin-left: $gutterP / 2;
+  margin-left: $gutterP / 2 ;
   margin-right: $gutterP / 2;
   margin-top: $gutter;
   height: 30px;
-  border-radius: 3px;
+  border-radius: 5px;
   transition: 350ms;
-  padding: 10px;
+  // padding: 10px;
+  // padding is causing page to grow wide
+  // margin is also slightly too big, slight growth wide
 }
 
 input:focus {
