--- a/app/scss/lib/layout/_header.scss
+++ b/app/scss/lib/layout/_header.scss
@@ -1,8 +1,43 @@
+$brand-primary: #444;
+$brand-secondary: #888;
+$black: #000;
+$white: #fff;
+$grey: #ccc;
+$gutter: 30px;
+$gutterP: 10%;
+
 header{
-  height: 100px;
-  line-height: 100px;
-  font-size: 175%;
-  p{
-    margin-left: $gutter;
+
+  .navbar{
+    height: 100px;
+    background: $brand-primary;
+    width: 100%;
+    h2{
+      height: 100px;
+      line-height: 100px;
+      display: inline-block;
+      margin-top: 0;
+      float: left;
+    }
+    nav{
+      display:inline-block;
+      width: 100px;
+      line-height: 100px;
+      height:100px;
+      float: right;
+      margin-right: $gutterP / 2;
+      div{
+        // line-height: 100px;
+        // button{
+        //   margin-top: 30px;
+        height:100px;
+          width: 100%;
+      input{
+        width: 100%;
+        background: $grey;
+        color: $brand-primary;
+      }
+      }
+    }
   }
 }
