--- a/app/component/gallery/gallery-item/_gallery-item.scss
+++ b/app/component/gallery/gallery-item/_gallery-item.scss
@@ -11,6 +11,7 @@ $gutter: 30px;
     padding-top: $gutter / 2;
     padding-bottom: $gutter / 2;
     border-radius: 5px;
+    margin-top: $gutter;
     div{
       margin-bottom: $gutter / 2;
       height: 35px;
