--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -3,9 +3,13 @@
 
   <ul>
     <gallery-item ng-repeat="item in homeCtrl.galleries"
-                  gallery="item">
+                  gallery="item"
+                  delete-done="homeCtrl.galleryDeleteDone(galleryData)"
+                  ng-click="homeCtrl.currentGallery = item">
                   <!-- {{item?}} -->
-
     </gallery-item>
   </ul>
+
+  <thumbnail-container ng-if="homeCtrl.currentGallery"
+                       gallery="homeCtrl.currentGallery"></thumbnail-container>
 </section>
