--- a/app/component/gallery/thumbnail/thumbnail.html
+++ b/app/component/gallery/thumbnail/thumbnail.html
@@ -1,5 +1,7 @@
 <div class="thumbnail">
-  <img ng-src="{{ thumbnailCtrl.pic.imageURI }}" alt="{{ thumbnailCtrl.pic.desc }}">
+  <div>
+    <img ng-src="{{ thumbnailCtrl.pic.imageURI }}" alt="{{ thumbnailCtrl.pic.desc }}">
+  </div>
   <span class="btn-std" ng-click="thumbnailCtrl.deletePic()">delete</span>
   <!-- TODO: build out the delete sercive/controller methods -->
 </div>
