--- a/app/scss/lib/base/_base.scss
+++ b/app/scss/lib/base/_base.scss
@@ -38,6 +38,8 @@ button{
   padding: 0;
   height: 40px;
   outline: 0;
+  border-radius: 5px;
+  text-align: center;
 }
 .btn-std:focus{
   outline: 0;
