added bootstrap carousel

--- a/app/component/landing/login/login.html
+++ b/app/component/landing/login/login.html
@@ -7,6 +7,7 @@
       'success': loginForm.username.$valid
     }">
       <input type="text"
+             uib-tooltip="username must have 8 characters"
              name="username"
              placeholder="username"
              ng-minlength="4"
